# tcp-sdk

./: .envrc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  flake.nix  generate_requirements.py  pyproject.toml  requirements.txt  requirements.txt.dev  setup.py  test.sh
.github/workflows/: publish.yml
cli/: __main__.py  app.py  common.py  data.py  utils.py
notebook/: TCP_Training.ipynb
tcp/: __init__.py  __main__.py  client.py  clientAPI.py  dashboard.py  exceptions.py  logs.py  text_serializer.py  track_usage.py  upload.py
tcpAPI/: API.py  __init__.py  adminAPI.py  common.py  main.py  tcpAPI.py
tcpSDK/: __init__.py  admin.py  adminAPI.py  client.py  clientAPI.py  test.py  utils.py
tcp_api_testing/: __init__.py  adminAPI.py  common.py  main.py  tcpAPI.py
tests/: __init__.py  mail.py  pagination.py  retry.py  test_app.py  test_auth.py  test_data.py  test_lics.py  test_process.py  test_run.py
