[tool.poetry]
name = "tcp-sdk"
version = "1.0.28"
description = "Python SDK to query The Cross Product API."
authors = ["Théodore Chabardès <theodore.chabardes@thecrossproduct.com>"]
license = "Proprietary License"
readme = "README.md"
packages = [{include = "tcp"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
slumber = "^0.7.1"
requests-oauthlib = "^2.0.0"
ipython = { version = "^8.24.0", optional = true }
pyzmq = "25.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
google-api-python-client = "^2.125.0"
google-auth-oauthlib = "^1.2.0"
python-socketio = "^5.11.2"
websocket-client = "^1.8.0"

[tool.poetry.group.build.dependencies]
build = "^1.2.1"

[tool.poetry.extras]
ipython = ["ipython"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
